testutils/test/base_ingresses/basic.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
          - backend:
              serviceName: tea-svc
              servicePort: 80
            path: /tea
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
