testutils/test/base_ingresses/basic_tcp_ports.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-tcpport-ingress
  namespace: default
  annotations:
    "ingress.bluemix.net/tcp-ports": "serviceName=coffee-svc ingressPort=9090 servicePort=8080;serviceName=tea-svc ingressPort=9000 servicePort=8090"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
          - backend:
              serviceName: tea-svc
              servicePort: 80
            path: /tea
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
