testutils/test/base_ingresses/example.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: tea-svc
              servicePort: 8080
            path: /tea
    - host: xmpl.com
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 8080
            path: /coffee
  tls:
    - hosts:
        - example.com
      secretName: example-secret
    - hosts:
        - xmpl.com
      secretName: xmpl-secret
