testutils/test/base_ingresses/location_modifier_v1.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: location-modifier-v1
  namespace: default
  annotations:
    ingress.bluemix.net/location-modifier: "modifier='=' serviceName=coffee-svc;modifier='~*' serviceName=tea-svc"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
          - backend:
              serviceName: tea-svc
              servicePort: 80
            path: /tea
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
