testutils/test/base_ingresses/modify_headers.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: header-modifier
  namespace: default
  annotations:
    ingress.bluemix.net/proxy-add-headers: |
      serviceName=coffee-svc {
      header1 value1;
      header2 value2;
      }
      serviceName=tea-svc {
      header3 value3;
      }
    ingress.bluemix.net/response-add-headers: |
      serviceName=coffee-svc {
      header4:value1;
      header5:value3;
      }
      serviceName=tea-svc {
      header6:value6;
      }
    ingress.bluemix.net/response-remove-headers: |
      serviceName=coffee-svc {
      header7;
      header8;
      }
      serviceName=tea-svc {
      header9;
      }
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
          - backend:
              serviceName: tea-svc
              servicePort: 80
            path: /tea
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
