testutils/test/base_ingresses/no_services_v1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-no-services
  namespace: default
spec:
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
