testutils/test/base_ingresses/rewrite.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rewrite
  namespace: default
  annotations:
    ingress.bluemix.net/rewrite-path: "serviceName=coffee-svc rewrite=/new-coffee;serviceName=tea-svc rewrite=/new-tea;serviceName=root-svc rewrite=/new-root"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
          - backend:
              serviceName: tea-svc
              servicePort: 80
            path: /tea
          - backend:
              serviceName: root-svc
              servicePort: 80
            path: /
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
