testutils/test/base_ingresses/tcp_ports_with_albid.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tcpport-albid-ingress
  namespace: default
  annotations:
    "ingress.bluemix.net/tcp-ports": "serviceName=coffee2-svc ingressPort=9080 servicePort=8080;serviceName=tea2-svc ingressPort=9900 servicePort=8090"
    "ingress.bluemix.net/ALB-ID": "public-crbr123456-alb1;private-crbr123456-alb2"
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee2-svc
              servicePort: 80
            path: /coffee2
          - backend:
              serviceName: tea2-svc
              servicePort: 80
            path: /tea2
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
