testutils/test/base_ingresses/two_host_v1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-two-hosts
  namespace: default
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              service:
                name: coffee-svc
                port:
                  number: 80
            path: /coffee
          - backend:
              service:
                name: tea-svc
                port:
                  number: 80
            path: /tea
    - host: pretest.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              service:
                name: coffee-svc
                port:
                  number: 80
            path: /coffee
status:
  loadBalancer:
    ingress:
      - ip: 10.86.77.141
